--- a/res/layout/main_fragment_tab_layout.xml
+++ b/res/layout/main_fragment_tab_layout.xml
@@ -10,12 +10,11 @@
         android:layout_height="0dip"
         android:layout_weight="1" >
     </FrameLayout>
-
-    <TextView
+     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_above="@android:id/tabs"
-        />
+        android:background="@color/spilt_line_color" />
 
     <RadioGroup
         android:id="@+id/rg_tab_menu"
@@ -27,25 +26,30 @@
             android:id="@+id/tab_rb_1"
             style="@style/tab_rb_style"
             android:checked="true"
+            android:drawableTop="@drawable/tabs_near"
             android:text="附近" />
 
         <RadioButton
             android:id="@+id/tab_rb_2"
             style="@style/tab_rb_style"
+            android:drawableTop="@drawable/tabs_dynamic"
             android:text="动态" />
 
         <RadioButton
             android:id="@+id/tab_rb_3"
             style="@style/tab_rb_style"
+            android:drawableTop="@drawable/tabs_chance"
             android:text="机会" />
 
         <RadioButton
             android:id="@+id/tab_rb_4"
             style="@style/tab_rb_style"
+            android:drawableTop="@drawable/tabs_message"
             android:text="消息" />
          <RadioButton
             android:id="@+id/tab_rb_5"
             style="@style/tab_rb_style"
+            android:drawableTop="@drawable/tabs_user"
             android:text="我的" />
     </RadioGroup>
 
