--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
     <resources>
         <color name="titlebg">#FFFF8080</color>
-        <color name="white">#FFFFFFFF</color>
-        <color name="black">#FF000000</color>
         <color name="texthui">#FF959595</color>
         <color name="qianhui">#FFA5A5A5</color>
         <color name="touming">#00FFFFFF</color>
+        
+            <!-- 定义标准颜色 -->
+    <color name="white">#FFFFFF</color> <!-- 纯白 -->
+    <color name="black">#000000</color> <!-- 纯黑 -->
+    <color name="transparent_color">#00000000</color> <!-- 透明色 -->
+    <color name="tabs_color">#FFFFFF</color>
+    <color name="spilt_line_color">#CCCCCC</color>
+
+	<!-- 字体颜色标准 -->
+	<color name = "new_color_1">#231815</color>
+	<color name = "new_color_2">#525861</color>
+	<color name = "new_color_3">#828A98</color>
+	<color name = "new_color_4">#CCCCCC</color>
+	<color name = "new_color_5">#CD102C</color>
+	<color name = "new_color_6">#FFFFFF</color>
+
+	<color name="red"> #d72839</color>
+	 <color name="lightgray">#cccccc</color>
+	 <color name="bggray">#e2e2e2</color>
+	 <color name="yello_bg_top">#4c4236</color>
     </resources>
