--- a/res/layout/near_fragment.xml
+++ b/res/layout/near_fragment.xml
@@ -12,7 +12,7 @@
         android:gravity="center_vertical" >
 
         <TextView
-            android:id="@+id/tvmiaoshu"
+            android:id="@+id/tvshaixuan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
