--- a/res/layout/near_sousuo.xml
+++ b/res/layout/near_sousuo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/searchfragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -11,34 +12,41 @@
         android:background="@color/titlebg"
         android:gravity="center_vertical" >
 
-        <TextView
-            android:id="@+id/tvshaixuan"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="筛选"
-            android:textColor="@color/white"
-            android:textSize="14dp" />
-
-        <TextView
-            android:id="@+id/tvname"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="6"
-            android:gravity="center"
-            android:text="附近"
-            android:textColor="@color/white"
-            android:textSize="18dp" />
-
         <ImageButton
-            android:id="@+id/imgbtsearch"
+            android:id="@+id/imgback"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_weight="1"
+            android:background="@color/titlebg"
+            android:src="@drawable/f3_03" />
+
+        <EditText
+            android:id="@+id/etsrc"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="6"
+            android:background="@drawable/near_etbg"
+            android:hint="搜索"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textSize="13dp" />
+
+        <TextView
+            android:id="@+id/tvok"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/titlebg"
-            android:src="@drawable/f9_06" />
+            android:gravity="center"
+            android:text="确定"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            android:background="@color/titlebg" />
 
     </LinearLayout>
 
