--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -23,4 +23,6 @@
 	<dimen name = "new_size_4">17.0sp</dimen>
 	<dimen name = "new_size_5">20.0sp</dimen>
 	<dimen name = "new_size_6">27.0sp</dimen>
+	
+	<dimen name="main_top_height">50dp</dimen>
 </resources>
