--- a/res/layout/main_top_layout.xml
+++ b/res/layout/main_top_layout.xml
@@ -13,7 +13,23 @@
         android:layout_marginLeft="@dimen/dimen_small"
         android:background="@drawable/btn_gobackl"
         android:onClick="goBack"
+        android:padding="5dp"
         tools:ignore="ContentDescription" />
+    
+    
+    <Button
+        android:id="@+id/main_top_left2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/dimen_small"
+        android:background="@null"
+        android:textSize="@dimen/new_size_4"
+        android:textColor="@color/white"
+        android:visibility="gone"
+         />
+    
+    
 
     <TextView
         android:id="@+id/main_top_title"
@@ -36,6 +52,7 @@
         android:text="3/4"
         android:textSize="@dimen/new_size_4"
         android:textColor="@color/white"
-        android:visibility="gone" />
+        android:visibility="gone" 
+        />
 
 </RelativeLayout>
