--- a/res/layout/main_top_layout.xml
+++ b/res/layout/main_top_layout.xml
@@ -3,34 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/main_top_height"
-    android:background="@color/bt_red" >
+    android:background="@color/main_red" >
 
-    <ImageButton
+    <TextView
         android:id="@+id/main_top_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/dimen_small"
-        android:background="@drawable/btn_gobackl"
+        android:drawableLeft="@drawable/btn_gobackl"
         android:onClick="goBack"
-        android:padding="5dp"
+        android:padding="10dp"
         tools:ignore="ContentDescription" />
-    
-    
-    <Button
-        android:id="@+id/main_top_left2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/dimen_small"
-        android:background="@null"
-        android:textSize="@dimen/new_size_4"
-        android:textColor="@color/white"
-        android:visibility="gone"
-         />
-    
-    
-
     <TextView
         android:id="@+id/main_top_title"
         android:layout_width="wrap_content"
@@ -41,14 +25,13 @@
         android:textColor="@color/white"
         android:textSize="@dimen/new_size_6" />
 
-    <Button
+    <TextView
         android:id="@+id/main_top_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/dimen_normal"
-        android:background="@null"
         android:text="3/4"
         android:textSize="@dimen/new_size_4"
         android:textColor="@color/white"
