--- a/res/layout/dialog_self_title_two.xml
+++ b/res/layout/dialog_self_title_two.xml
@@ -32,7 +32,7 @@
             android:lineSpacingExtra="5dip"
             android:padding="20dip"
             android:text="你确认要放弃此次借款吗？"
-            android:textColor="@color/yello_bg_top"
+            android:textColor="@color/color_2"
             android:textSize="@dimen/new_size_2" />
 
     </LinearLayout>
@@ -50,8 +50,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/bt_dialog_left"
-            android:text="放弃，重新申请"
-            android:textColor="@color/dailog_color_size"
+            android:text="放弃"
+            android:textColor="@color/color_2"
             android:textSize="15sp"
              />
 
@@ -62,7 +62,7 @@
             android:layout_weight="1"
             android:background="@drawable/bt_dialog_right"
             android:text="不放弃"
-            android:textColor="@color/dailog_color_size"
+            android:textColor="@color/color_2"
             android:textSize="15sp"
             />
     </LinearLayout>
