--- a/res/drawable/btn_register_3.xml
+++ b/res/drawable/btn_register_3.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" android:state_selected="true" android:drawable="@drawable/bt_register_3_press"></item>
+    <item android:state_checked="true" android:drawable="@drawable/bt_register_3_press"></item>
 	<item android:drawable="@drawable/bt_register_3"></item>
 </selector>
 
