--- a/res/layout/dynamic_fragment.xml
+++ b/res/layout/dynamic_fragment.xml
@@ -3,11 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+	<include layout="@layout/main_top_layout" />
 
-    <TextView
-        android:id="@+id/tvmiaoshu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="活动" />
+	<ListView
+	    android:id="@+id/lv_dynamic"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" 
+	    android:layout_marginTop="10dp"
+	    >
+	</ListView>
 
 </LinearLayout>
