--- a/res/layout/findpwd_first_layout.xml
+++ b/res/layout/findpwd_first_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_grey"
-    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical" >
 
     <include layout="@layout/main_top_layout" />
 
@@ -35,7 +36,7 @@
                     android:drawablePadding="10dp"
                     android:ems="20"
                     android:focusable="true"
-                    android:hint="@string/login_hint_username"
+                    android:hint="@string/register_pwd_hint4"
                     android:textColorHint="@color/color_4"
                     android:textSize="@dimen/new_size_3" >
 
@@ -55,14 +56,57 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
-                android:text="@string/register_protocol"
+                android:text="@string/register_pwd_hint3"
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_2" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@color/white"
+                android:focusable="true"
+                android:orientation="vertical"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="15dp" >
+
+                <AutoCompleteTextView
+                    android:id="@+id/et_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:drawableLeft="@drawable/username_draw_xml"
+                    android:drawablePadding="10dp"
+                    android:ems="20"
+                    android:focusable="true"
+                    android:hint="@string/register_three_hint2"
+                    android:textColorHint="@color/color_4"
+                    android:textSize="@dimen/new_size_3" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/spilt_line_color" />
+            <Button
+                android:id="@+id/bt_register_pwd_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="15dp"
+                android:background="@color/main_red"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="@string/register_three_code"
+                android:textColor="@color/white"
+                android:textSize="@dimen/new_size_3" />
 
         </LinearLayout>
 
         <Button
-            android:id="@+id/bt_register_first_next"
+            android:id="@+id/bt_register_pwd_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -70,7 +114,6 @@
             android:text="@string/main_next"
             android:textColor="@color/white"
             android:textSize="@dimen/new_size_4" />
-
     </FrameLayout>
 
 </LinearLayout>
