--- a/res/layout/my_main_fans.xml
+++ b/res/layout/my_main_fans.xml
@@ -3,26 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7"
-        android:background="@color/titlebg"
-        android:gravity="center_vertical" >
-
-        <TextView
-            android:id="@+id/tvname"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="6"
-            android:gravity="center"
-            android:text="我的"
-            android:textColor="@color/white"
-            android:textSize="18dp" />
-
-    </LinearLayout>
-
+<include layout="@layout/main_top_layout" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
