--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -522,7 +522,7 @@
                         android:orientation="vertical" >
 
                         <ListView
-                            android:id="@+id/listView1"
+                            android:id="@+id/lzuopin"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" >
                         </ListView>
@@ -605,43 +605,6 @@
                             android:layout_marginTop="5dp"
                             android:background="@color/bggray"
                             android:orientation="vertical" >
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" >
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="姓名" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
-
-                        <TextView
-                            android:id="@+id/textView9"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="吴沐熙" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
-                            android:orientation="vertical" >
-
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
