--- a/res/layout/near_yirenzuopin_item.xml
+++ b/res/layout/near_yirenzuopin_item.xml
@@ -4,7 +4,7 @@
     android:gravity="center_vertical" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imgzuopin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/f10_49" />
@@ -44,19 +44,19 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/tvzuopinname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="一夜惊喜" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvzuopinjuese"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="米雪" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvzuopintime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2013年8月9日" />
