--- a/res/layout/near_xingtantonggao_item.xml
+++ b/res/layout/near_xingtantonggao_item.xml
@@ -4,7 +4,7 @@
     android:gravity="center_vertical" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imgtonggao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/f10_49" />
@@ -19,20 +19,20 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/TextView02"
+            android:id="@+id/tvtonggaoname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="平面模特" />
 
         <TextView
-            android:id="@+id/TextView01"
+            android:id="@+id/tvtonggaoneirong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1905电影网(薪酬5000/天)"
             android:textColor="@color/bggray" />
 
         <TextView
-            android:id="@+id/TextView03"
+            android:id="@+id/tvtonggaoyaoqiu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="北京  18-24岁  女"
