--- a/res/layout/near_xingtanxiangqingmobanhead.xml
+++ b/res/layout/near_xingtanxiangqingmobanhead.xml
@@ -531,14 +531,13 @@
                         android:text="发布的通告" />
 
                    <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <ListView
-                            android:id="@+id/listView1"
+                            android:id="@+id/ltonggao"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" >
                         </ListView>
