--- a/res/layout/chance_fragment.xml
+++ b/res/layout/chance_fragment.xml
@@ -2,12 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main_white"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/tvmiaoshu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="机会" />
+    <include layout="@layout/main_top_find_layout" />
+
+			<RadioGroup
+			    android:id="@+id/radioGroup"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_marginBottom="10dp"
+			    android:layout_marginLeft="20dp"
+			    android:layout_marginRight="20dp"
+			    android:layout_marginTop="10dp"
+			    android:contentDescription="职位"
+			    android:orientation="horizontal" >
+
+                    <RadioButton
+                        android:id="@+id/radioButton1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@null"
+                        android:background="@drawable/btn_chance_new"
+                        android:textColor="@color/color_4"
+                        android:textSize="@dimen/new_size_2" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@null"
+                        android:background="@drawable/btn_chance_hot"
+                        android:checked="true"
+                        android:textColor="@color/color_4"
+                        android:textSize="@dimen/new_size_2" />
+
+                </RadioGroup>
+
+			<ListView
+			    android:id="@+id/lv_chance"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content" >
+			</ListView>
 
 </LinearLayout>
